--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Holibyte</title>
+  <title>Phoenix</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"/>
 </head>
 <body>
 <noscript>
-  <strong>We're sorry but Holibyte doesn't work properly without JavaScript enabled. Please enable it to
+  <strong>We're sorry but Phoenix doesn't work properly without JavaScript enabled. Please enable it to
     continue.</strong>
 </noscript>
 <div id="app"></div>
